# bugoutDemo

./: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/testin/bugout/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/testin/bugout/demo/: BaseActivity.java  MainActivity.java  MyApplication.java
app/src/main/jni/: crash_test.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cn/testin/bugout/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
